fixed slider flicker and aligment

--- a/styles/_app.scss
+++ b/styles/_app.scss
@@ -398,11 +398,11 @@ small.text-muted {
     font-weight: 500;
     color: $primary-color;
     @include respond(xs) {
-        margin: 5rem 1rem 2.4rem 1rem;
+        margin: 5rem 1rem 2.4rem 0rem;
     }
     @include respond(md) {
         font-size: 2rem;
-        margin: 5rem 1rem 2.4rem 1rem;
+        margin: 5rem 1rem 2.4rem 0rem;
     }
     span {
         color: $primary-color;
